[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/game_graph/GameGraphEditor.gd" type="Script" id=1]
[ext_resource path="res://addons/game_graph/editor/DialogList.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/game_graph/graph_nodes/GameGraphGraphEdit.tscn" type="PackedScene" id=3]

[node name="GameGraphEditor" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 200 )
script = ExtResource( 1 )

[node name="TabContainer" type="TabContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
tab_align = 0

[node name="Dialogs" type="HSplitContainer" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="DialogList" parent="TabContainer/Dialogs" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 200.0
margin_bottom = 564.0

[node name="Container2" type="VBoxContainer" parent="TabContainer/Dialogs"]
margin_left = 212.0
margin_right = 1016.0
margin_bottom = 564.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Menu" type="MarginContainer" parent="TabContainer/Dialogs/Container2"]
margin_right = 804.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Dialogs/Container2/Menu"]
margin_left = 5.0
margin_top = 5.0
margin_right = 799.0
margin_bottom = 27.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Dialogs/Container2/Menu/HBoxContainer"]
margin_right = 685.0
margin_bottom = 22.0
size_flags_horizontal = 3

[node name="Dialog" type="Button" parent="TabContainer/Dialogs/Container2/Menu/HBoxContainer/HBoxContainer"]
margin_right = 52.0
margin_bottom = 22.0
text = "Dialog"

[node name="Choice" type="Button" parent="TabContainer/Dialogs/Container2/Menu/HBoxContainer/HBoxContainer"]
margin_left = 56.0
margin_right = 111.0
margin_bottom = 22.0
text = "Choice"

[node name="Event" type="Button" parent="TabContainer/Dialogs/Container2/Menu/HBoxContainer/HBoxContainer"]
margin_left = 115.0
margin_right = 162.0
margin_bottom = 22.0
text = "Event"

[node name="HBoxContainer2" type="HBoxContainer" parent="TabContainer/Dialogs/Container2/Menu/HBoxContainer"]
margin_left = 689.0
margin_right = 794.0
margin_bottom = 22.0

[node name="Load" type="Button" parent="TabContainer/Dialogs/Container2/Menu/HBoxContainer/HBoxContainer2"]
margin_right = 42.0
margin_bottom = 22.0
text = "Load"

[node name="Save" type="Button" parent="TabContainer/Dialogs/Container2/Menu/HBoxContainer/HBoxContainer2"]
margin_left = 46.0
margin_right = 105.0
margin_bottom = 22.0
text = "Save as"

[node name="GraphEdit" parent="TabContainer/Dialogs/Container2" instance=ExtResource( 3 )]
margin_right = 804.0
margin_bottom = 564.0

[node name="Console" type="TextEdit" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
rect_min_size = Vector2( 0, 100 )

[node name="PopupMenu" type="PopupMenu" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -870.0
margin_bottom = -498.0
rect_min_size = Vector2( 150, 0 )
items = [ "dialog", null, 0, false, false, 1, 0, null, "", false, "choice", null, 0, false, false, 2, 0, null, "", false, "event", null, 0, false, false, 3, 0, null, "", false ]

[node name="SaveDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -291.5
margin_top = -206.0
margin_right = 291.5
margin_bottom = 206.0
resizable = true
filters = PoolStringArray( "*.tres ; Resource" )

[node name="LoadDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -291.5
margin_top = -208.5
margin_right = 291.5
margin_bottom = 208.5
size_flags_horizontal = 0
size_flags_vertical = 0
window_title = "Open a File"
resizable = true
mode = 0
filters = PoolStringArray( "*.tres ; Resource" )
[connection signal="dialog_selected" from="TabContainer/Dialogs/DialogList" to="." method="_on_DialogList_dialog_selected"]
[connection signal="pressed" from="TabContainer/Dialogs/Container2/Menu/HBoxContainer/HBoxContainer/Dialog" to="." method="_on_Dialog_pressed"]
[connection signal="pressed" from="TabContainer/Dialogs/Container2/Menu/HBoxContainer/HBoxContainer/Choice" to="." method="_on_Choice_pressed"]
[connection signal="pressed" from="TabContainer/Dialogs/Container2/Menu/HBoxContainer/HBoxContainer/Event" to="." method="_on_Event_pressed"]
[connection signal="pressed" from="TabContainer/Dialogs/Container2/Menu/HBoxContainer/HBoxContainer2/Load" to="." method="_on_Load_resource_pressed"]
[connection signal="pressed" from="TabContainer/Dialogs/Container2/Menu/HBoxContainer/HBoxContainer2/Save" to="." method="_on_Save_resource_pressed"]
[connection signal="connection_to_empty" from="TabContainer/Dialogs/Container2/GraphEdit" to="." method="_on_GraphEdit_connection_to_empty"]
[connection signal="popup_request" from="TabContainer/Dialogs/Container2/GraphEdit" to="." method="_on_GraphEdit_popup_request"]
[connection signal="focus_exited" from="PopupMenu" to="." method="_on_PopupMenu_focus_exited"]
[connection signal="id_pressed" from="PopupMenu" to="." method="_on_PopupMenu_id_pressed"]
[connection signal="file_selected" from="SaveDialog" to="." method="_on_SaveDialog_file_selected"]
[connection signal="file_selected" from="LoadDialog" to="." method="_on_LoadDialog_file_selected"]
